use padding to prevent collapse

--- a/assets/extension_downloader.css
+++ b/assets/extension_downloader.css
@@ -3,7 +3,7 @@
  */
 
 #extension_downloader {
-	margin: 1em 0;
+	padding: 1em 0;
 }
 
 #extension_downloader h3 {
